--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -3,6 +3,15 @@
   <head>
     <link rel="stylesheet" href="style.css">
 
+<!--* `p`: a green background, white text, and a font size of 18px-->
+    <style>
+      p {
+        background-color:green;
+        color:white;
+        font-size:18px;
+      }
+    </style>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
